<resources>
    <string name="app_name">Oi!</string>

    <string name="emergency">Emergency</string>
    <string name="emergency_message">Emergency message</string>
    <string name="send">Send</string>
    <string name="accident_description">Accident Description</string>
    <string name="wifi_contacts">WifiDirect Contacts</string>
    <string name="police">Police</string>
    <string name="firefighter">Firefighter</string>
    <string name="special_services">112 Services</string>
    <string name="rescue_team">Rescue team</string>
    <string name="push_data">People nearby</string>
    <string name="action_settings">Settings</string>
    <string name="new_chat">Contacts</string>
    <string name="chat">Chat</string>
    <string name="contacts_access_denied"> Change contacts access configurations in settings.</string>
    <string name="user_configuration_message">Select your user preference:</string>

    <string name="user_config">User configuration</string>
    <string name="user_name">Name</string>
    <string name="phone_Number">Phone number</string>

    <string name="message_configuration">Message setting</string>
    <string name="save">Save</string>
    <string name="name_error">Name is required</string>
    <string name="phone_error">Phone number is required</string>

    <string name="dialog_title">Important</string>
    <string name="initial_message"> After select your user profile, you will not be able to change it.
        If you want to do it, go to setting -> Management Application section and reset Oi! data.
        However, all data is going to be erased.</string>

    <string name="select_option">Option selected is required </string>
    <string name="empty_message">Content message is required</string>

    <string name="contact_permission_denied">Check permission configuration in settings.</string>

    <string name="invitation">New invitation</string>
    <string name="invitation_accept">Accept</string>
    <string name="invitation_reject">Reject</string>
    <string name="new_invitation"> wants to talk whit you.</string>

    <string name="close">Close</string>
    <string name="from">From:</string>
    <string name="message">Message:</string>

    <string name="progress_message">Registering prefixes ...</string>

    <string name="important">Important</string>
    <string name="request_message"> In order to use Oi! application, NDN-Opp is required. Press accept and install the application.</string>

    <string name="configuration_message"> Important: \nOi! is able to establish communication only with your contacts which have country code register.</string>

</resources>
