<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="0.30"
        android:background="@color/emergency"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:paddingTop="12dp"
            android:text="@string/invitation"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewContactName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.30"
        android:paddingLeft="6dp"
        android:paddingTop="12dp"
        android:text="@string/new_invitation"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAccept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invitation_accept" />

        <Button
            android:id="@+id/buttonReject"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invitation_reject" />
    </LinearLayout>

</LinearLayout>