<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="0.30"
        android:background="@color/emergency"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/emergency"
            android:paddingTop="12dp"
            android:text="@string/message_configuration"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxPeopleNearby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30"
        android:text="@string/push_data" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/emergency" />

</LinearLayout>